@@ -193,14 +193,14 @@ public class ExternalDocumentServiceImpl implements ExternalDocumentService {
           if (DevelopmentVersion.DEV.getCode().equalsIgnoreCase(v2.getKey())) {
             return -1;
           }
-          return MavenVersionComparator.compare(v1.getKey(), v2.getKey());
+          return MavenVersionComparator.getInstance().compare(v2.getKey(), v1.getKey());
         })
         .map((Map.Entry<String, List<ExternalDocumentMeta>> entry) -> {
           String ver = entry.getKey();
           ExternalDocumentMeta chosenMeta = entry.getValue().stream()
               .filter(meta -> meta.getLanguage() != null && meta.getLanguage().equals(selectedLanguage))
               .findFirst()
-              .orElse(entry.getValue().get(0));
+              .orElse(entry.getValue().getFirst());
           return DocumentInfoResponse.DocumentVersion.builder().version(ver)
               .url(host + chosenMeta.getRelativeLink()).build();
         }).toList();
